fix: header z-index 100

--- a/online-zoo/src/sass/layout/_header.scss
+++ b/online-zoo/src/sass/layout/_header.scss
@@ -135,6 +135,7 @@
   .header {
     height: 34px;
     position: fixed;
+    z-index: 100;
   }
 
   .header-container {
